--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 version: "3"
 
+volumes:
+  conf-volume:
+  vhost-volume:
+  html-volume:
+
 services:
   nginx:
     restart: always
@@ -9,9 +14,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - "/etc/nginx/conf.d"
-      - "/etc/nginx/vhost.d"
-      - "/usr/share/nginx/html"
+      - conf-volume:"/etc/nginx/conf.d"
+      - vhost-volume:"/etc/nginx/vhost.d"
+      - html-volume:"/usr/share/nginx/html"
       - "./volumes/proxy/certs:/etc/nginx/certs:ro"
     networks:
       - proxy-tier
@@ -25,8 +30,9 @@ services:
     volumes:
       - "/var/run/docker.sock:/tmp/docker.sock:ro"
       - "./volumes/proxy/templates/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro"
-    volumes_from:
-      - nginx
+      - conf-volume:"/etc/nginx/conf.d"
+      - vhost-volume:"/etc/nginx/vhost.d"
+      - html-volume:"/usr/share/nginx/html"
     networks:
       - proxy-tier
     entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
@@ -38,11 +44,12 @@ services:
     depends_on:
       - nginx
       - nginx-gen
-    volumes_from:
-      - nginx
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "./volumes/proxy/certs:/etc/nginx/certs:rw"
+      - conf-volume:"/etc/nginx/conf.d"
+      - vhost-volume:"/etc/nginx/vhost.d"
+      - html-volume:"/usr/share/nginx/html"
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
 
@@ -73,7 +80,7 @@ services:
   #     - LETSENCRYPT_HOST=sample.example.com
   #     - LETSENCRYPT_EMAIL=email@example.com
 
-# networks:
-#   proxy-tier:
+networks:
+  proxy-tier:
 #     external:
 #       name: "nginx-proxy"
