--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,10 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - conf-volume:"/etc/nginx/conf.d"
-      - vhost-volume:"/etc/nginx/vhost.d"
-      - html-volume:"/usr/share/nginx/html"
-      - "./volumes/proxy/certs:/etc/nginx/certs:ro"
+      - conf-volume:/etc/nginx/conf.d
+      - vhost-volume:/etc/nginx/vhost.d
+      - html-volume:/usr/share/nginx/html
+      - ./volumes/proxy/certs:/etc/nginx/certs:ro
     networks:
       - proxy-tier
 
@@ -28,11 +28,12 @@ services:
     depends_on:
       - nginx
     volumes:
-      - "/var/run/docker.sock:/tmp/docker.sock:ro"
-      - "./volumes/proxy/templates/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro"
-      - conf-volume:"/etc/nginx/conf.d"
-      - vhost-volume:"/etc/nginx/vhost.d"
-      - html-volume:"/usr/share/nginx/html"
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./volumes/proxy/templates/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
+      - conf-volume:/etc/nginx/conf.d
+      - vhost-volume:/etc/nginx/vhost.d
+      - html-volume:/usr/share/nginx/html
+      - ./volumes/proxy/certs:/etc/nginx/certs:ro
     networks:
       - proxy-tier
     entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
@@ -45,11 +46,11 @@ services:
       - nginx
       - nginx-gen
     volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "./volumes/proxy/certs:/etc/nginx/certs:rw"
-      - conf-volume:"/etc/nginx/conf.d"
-      - vhost-volume:"/etc/nginx/vhost.d"
-      - html-volume:"/usr/share/nginx/html"
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./volumes/proxy/certs:/etc/nginx/certs:rw
+      - conf-volume:/etc/nginx/conf.d
+      - vhost-volume:/etc/nginx/vhost.d
+      - html-volume:/usr/share/nginx/html
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
 
