--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,12 @@ services:
 
   nginx-gen:
     restart: always
-    image: jwilder/docker-gen
+    image: docker-gen
+    build: ./compose/docker-gen-docker-cloud/
     container_name: nginx-gen
+    labels:
+        - NGINX_PROXY_SWARM_CONTAINER=true
+        - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy=true
     depends_on:
       - nginx
     volumes:
@@ -39,10 +43,14 @@ services:
       - ./volumes/proxy/certs:/etc/nginx/certs:ro
     networks:
       - proxy-tier
+    environment:
+      - PROXY_SERVICE_ENV_VAR=nginx_nginx
+    # environment:
+    #   - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
     deploy:
       placement:
         constraints: [node.role == manager]
-    entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    entrypoint: /usr/local/bin/docker-gen -notify-output -notify "./restart_service.sh" -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
 
   letsencrypt-nginx-proxy-companion:
     restart: always
@@ -58,7 +66,8 @@ services:
       - vhost-volume:/etc/nginx/vhost.d
       - html-volume:/usr/share/nginx/html
     environment:
-      - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
+      #- NGINX_DOCKER_GEN_CONTAINER=nginx-gen
+      - NGINX_PROXY_SWARM_CONTAINER=true
     deploy:
       placement:
         constraints: [node.role == manager]
