--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
 
   nginx-gen:
     restart: always
-    image: docker-gen
+    image: my docker-gen
     build: ./compose/docker-gen-docker-cloud/
     container_name: nginx-gen
     labels:
@@ -45,6 +45,8 @@ services:
       - proxy-tier
     environment:
       - PROXY_SERVICE_ENV_VAR=nginx_nginx
+    roles:
+      - global
     # environment:
     #   - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
     deploy:
