--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,17 @@
 version: "3"
 
 volumes:
-  conf-volume:
-  vhost-volume:
-  html-volume:
+  conf-volume: {}
+  vhost-volume: {}
+  html-volume: {}
+  certs-volume: {}
 
 services:
   nginx:
     restart: always
     image: nginx
-    container_name: nginx
+    labels:
+      - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy=true
     ports:
       - "80:80"
       - "443:443"
@@ -17,7 +19,7 @@ services:
       - conf-volume:/etc/nginx/conf.d
       - vhost-volume:/etc/nginx/vhost.d
       - html-volume:/usr/share/nginx/html
-      - ./volumes/proxy/certs:/etc/nginx/certs:ro
+      - certs-volume:/etc/nginx/certs:ro
     networks:
       - proxy-tier
     deploy:
@@ -26,48 +28,37 @@ services:
 
   nginx-gen:
     restart: always
-    image: my docker-gen
+    image: docker-gen-swarm
     build: ./compose/docker-gen-docker-cloud/
-    container_name: nginx-gen
-    labels:
-        - NGINX_PROXY_SWARM_CONTAINER=true
-        - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy=true
     depends_on:
       - nginx
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
+      #- /var/run/docker.sock:/var/run/docker.sock:ro
       - ./volumes/proxy/templates/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
       - conf-volume:/etc/nginx/conf.d
       - vhost-volume:/etc/nginx/vhost.d
       - html-volume:/usr/share/nginx/html
-      - ./volumes/proxy/certs:/etc/nginx/certs:ro
+      - certs-volume:/etc/nginx/certs:ro
     networks:
       - proxy-tier
-    environment:
-      - PROXY_SERVICE_ENV_VAR=nginx_nginx
-    # environment:
-    #   - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
     deploy:
       placement:
         constraints: [node.role == manager]
-    entrypoint: /usr/local/bin/docker-gen -notify-output -notify "./restart_service.sh" -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    entrypoint: /usr/local/bin/docker-gen -notify-output -notify "/restart_service.sh" -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
 
   letsencrypt-nginx-proxy-companion:
     restart: always
     image: jrcs/letsencrypt-nginx-proxy-companion
-    container_name: letsencrypt-nginx-proxy-companion
     depends_on:
       - nginx
       - nginx-gen
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./volumes/proxy/certs:/etc/nginx/certs:rw
+      - certs-volume:/etc/nginx/certs:rw
       - conf-volume:/etc/nginx/conf.d
       - vhost-volume:/etc/nginx/vhost.d
       - html-volume:/usr/share/nginx/html
-    environment:
-      #- NGINX_DOCKER_GEN_CONTAINER=nginx-gen
-      - NGINX_PROXY_SWARM_CONTAINER=true
     deploy:
       placement:
         constraints: [node.role == manager]
